--- a/public/_index.html
+++ b/public/_index.html
@@ -9,10 +9,12 @@
 
   <!-- inline CSS for splash screen -->
 
-  <link rel="import" href="bower_components/px-theme/px-theme-styles.html">
-  <style include="px-theme-styles" is="custom-style"></style>
+  <!--<link rel="import" href="bower_components/px-theme/px-theme-styles.html">
+  <style include="px-theme-styles" is="custom-style"></style> -->
 
-  
+  <link rel="import" href="bower_components/px-dark-theme/px-dark-theme-styles.html">
+  <style include="px-dark-theme-styles" is="custom-style"></style>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
